# mychess

./: CMakeLists.txt  main.cpp  readme.md
Easyx/include/: easyx.h  graphics.h
headers/: button.h  chess.h  chessai.h  data.h  table.h  widget.h  window.h
include/Easyx/: readme.txt
include/nlohmann/nlohmann/detail/input/: binary_reader.hpp
sources/: button.cpp  cheessai.cpp  chess.cpp  data.cpp  table.cpp  widget.cpp  window.cpp
